tests/core/valid/let-case.cl
class Main inherits IO{
  x : Int;
  main() : Object {{
    let b : Int <- 2 in let b : Int <- 5 in out_int(b);
  }};
};
