tests/core/invalid/let-case.cl
class Main inherits Loops{
  x : Int;
  main() : Int {{
    let in 1;
  }};
};
